# idbvec

./: .gitignore  Cargo.toml  LICENSE-APACHE  QUICKSTART.md  README.md  build-npm.sh  build-wasm.sh  example.html  package-lock.json  package.json  tsconfig.json  wrapper.ts
examples/demo/: package-lock.json  package.json  playwright.config.ts
examples/demo/html-app/: index.html  package-lock.json  package.json
examples/demo/html-app/src/: main.ts  style.css
examples/demo/react-app/: index.html  package-lock.json  package.json
examples/demo/react-app/src/: App.css  App.tsx  index.css
examples/demo/tests/: idbvec-demo.spec.ts
src/: distance.rs  hnsw.rs  lib.rs  vector.rs
tests/: integration.rs  wasm.rs
