[package]
name = "idbvec"
version = "0.2.0"
edition = "2021"
description = "Client-side vector database built on IndexedDB with WASM"
license = "MIT OR Apache-2.0"
authors = ["nightness"]
repository = "https://github.com/Brainwires/idbvec"
keywords = ["vector", "database", "wasm", "indexeddb", "hnsw"]
categories = ["database", "wasm"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Vector operations
num-traits = "0.2"

# Random number generation (with JS/WASM support)
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Enable SIMD
# target-feature = "+simd128"  # Uncomment for WebAssembly SIMD

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd"]
